--- a/site/sample-selector.html
+++ b/site/sample-selector.html
@@ -10,11 +10,12 @@
 		}
 
 		.highlight{
+			color: black;
 			font-size: 20px;
 			font-weight: bold;
 			font-style: italic;
 			background-color: green;
-			opacity: 0;
+			opacity: 10;
 		}
 
 		#mainpoint{
