--- a/site/+1 Chemistry.html
+++ b/site/+1 Chemistry.html
@@ -33,7 +33,7 @@
 	<p class="intro">Elements that are having electronic configuration ns1-2, in which last electrons are entering into s-orbit are called s-block elements.
 	elements of group-1 and group-2 are s-block elements</p>
 	<span1>Group-1/Alkali metals</span1>
-	<img src="500996-300x380">
+	<img src="500996-300x380" height="100px" width="100px" alt="message">
 	<p class="group">Group-1 consist of Li, Na, K, Rb, Cs, Fr are called alkali metals because they form hydroxides on reaction with water that are strongly alkaline. Amonf alkali metals Na and K are abundant. Fr is radioactive, with a t1/2 of 21 minutes.</p>
 
 </body>
