--- a/site/responsive.html
+++ b/site/responsive.html
@@ -118,7 +118,7 @@
 	<h1>responsive layout</h1>
 
 	<div class="row">
-		<div class="col-lg-3 col-lg-6"><p>Item 1</p></div>
+		<div class="col-lg-3 col-lg-6"><p>Ichicken</p></div>
 		<div class="col-lg-3 col-lg-6"><p>item 2 wow this is cool</p></div>
 		<div class="col-lg-3 col-lg-6"><p>Item 3</p></div>
 		<div class="col-lg-3 col-lg-6"><p>Item 4</p></div>
